--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -54,3 +54,17 @@ body {
     font-size: var(--font-size-display);
     text-align: center;
 }
+
+.word {
+    display: inline-flex;
+    justify-content: center;
+    position: relative;
+}
+
+.middle {
+    color: red;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+}
