--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -10,7 +10,7 @@
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
-    font-family: var(--font-family);
+    font-family: monospace;
     font-size: var(--font-size-base);
     line-height: 1.5;
     margin: 0;
@@ -53,4 +53,15 @@ body {
 #word-display {
     font-size: var(--font-size-display);
     text-align: center;
+}
+
+.word {
+    position: relative;
+    height: 1em;
+}
+
+.char {
+    position: absolute;
+    top: 0;
+    transform: translateX(-50%);
 }
