--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background: linear-gradient(135deg, #5b34da, #0066ff);
+    background: linear-gradient(135deg, rgba(91, 52, 218, 0.8), rgba(0, 102, 255, 0.8));
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.2);
     padding: 15px;
@@ -95,6 +95,7 @@ body {
     right: 10px;
     display: flex;
     gap: 15px;
+    margin: 10px;
 }
 
 #credits a {
