--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -127,5 +127,19 @@ body {
 
 #word-display {
     font-size: var(--font-size-display);
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.before, .after {
+    font-family: var(--font-family);
+}
+
+.middle {
+    color: red;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: var(--font-family);
 }
